# blender-asset-tracer

./: .arcconfig  .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini  update_version.sh
blender_asset_tracer/: __init__.py  bpathlib.py  cdefs.py  compressor.py
blender_asset_tracer/blendfile/: __init__.py  dna.py  dna_io.py  exceptions.py  header.py  iterators.py  magic_compression.py
blender_asset_tracer/cli/: __init__.py  blocks.py  common.py  list_deps.py  pack.py
blender_asset_tracer/pack/: __init__.py  filesystem.py  progress.py  queued_copy.py  s3.py  transfer.py  zipped.py
blender_asset_tracer/pack/shaman/: __init__.py  auth.py  client.py  transfer.py
blender_asset_tracer/trace/: __init__.py  blocks2assets.py  expanders.py  file2blocks.py  file_sequence.py  modifier_walkers.py  progress.py  result.py
blender_asset_tracer/tracer/: __init__.py  block_walkers.py  blocks.py  blocks2assets.py  cdefs.py  expanders.py  file2blocks.py  file_sequence.py  modifier_walkers.py  result.py
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  license.rst  make.bat  packing.rst
tests/: abstract_test.py  test_blendfile_dna.py  test_blendfile_dna_io.py  test_blendfile_loading.py  test_blendfile_modification.py  test_bpathlib.py  test_compressor.py  test_mypy.py  test_pack.py  test_pack_progress.py  test_pack_shaman.py  test_pack_zipped.py  test_shaman.py  test_shaman_cache.py  test_shaman_time_tracker.py  test_shaman_transfer.py  test_tracer.py  test_tracer_file2blocks.py  test_tracer_file_sequence.py
tests/blendfiles/: Cube.btx  absolute_path.blend  alembic-sequence-source.blend  alembic-sequence-user.blend  alembic-source.blend  alembic-user.blend  basic_file.blend  basic_file_compressed.blend  basic_file_compressed_zstd.blend  basic_file_zstandard.blend  clothsim.030.abc  clothsim.031.abc  clothsim.032.abc  clothsim.033.abc  clothsim.034.abc  clothsim.035.abc  clothsim.abc  corrupt_only_magic.blend  doubly_linked.blend  image_sequencer.blend  lamp_textures.blend  linked_cube.blend  linked_cube_compressed.blend  material_textures.blend  meshcache-source.blend  meshcache-user.blend  meshcache.mdd  missing_textures.blend  movieclip.blend  multiple_materials.blend  multires_external.blend  ocean_modifier.blend  recursive_dependency_1.blend  recursive_dependency_2.blend  with_font.blend  with_sequencer.blend
tests/blendfiles/T53562/: bam_pack_bug.blend
tests/blendfiles/T55539-particles/: particle.blend
tests/blendfiles/T55542-smoke/: smoke_cache.blend  smoke_cache_vdb.blend
tests/blendfiles/geometry-nodes-2/: set_file.blend
tests/blendfiles/geometry-nodes-3/: lib_trash.blend  set_file.blend  shot_file.blend
(+55 files in other folders)
