[tool.poetry]
name = "blender-asset-tracer"
version = "1.10"
homepage = 'https://developer.blender.org/project/profile/79/'

description = "BAT parses Blend files and produces dependency information. After installation run `bat --help`"
authors = [
    "Sybren A. Stüvel <sybren@stuvel.eu>",
    "Campbell Barton",
    "At Mind B.V. - Jeroen Bakker",
    ]
license = "GPL-2.0+"
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Utilities',
]

[tool.poetry.extras]
s3 = ["boto3"]
zstandard = ["zstandard"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.11"

# For S3 storage support:
boto3 = { version = "^1.9", optional = true }

# For Blender 3.0+ compressed file support.
zstandard = { version = "^0.15", optional = true }

[tool.poetry.dev-dependencies]
mypy = ">=0.701"
pytest = "^6.2"
pytest-cov = "^3.0.0"
# for the 'radon cc' command
radon = "^3.0"
# for converting profiler output to KCacheGrind input
"pyprof2calltree" = "*"
# For building documentation
sphinx = "^2.1"
sphinx-autobuild = "^0.7"
sphinx-rtd-theme = "^0.4"
responses = "^0.10"
pathlib2 = {version = "^2.3", python = "<3.6"}
tox = "^3.12"
types-requests = "^2.25.0"

[tool.poetry.scripts]
bat = 'blender_asset_tracer.cli:cli_main'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
